--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^5.2.2",
     "buffer": "^6.0.3",
     "chart.js": "^3.9.1",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.1",
     "ngx-paypal": "^10.1.0",
     "primeflex": "^3.2.1",
@@ -42,6 +43,7 @@
     "primeng": "^14.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -54,6 +56,7 @@
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
     "@ngrx/eslint-plugin": "^14.3.0",
+    "@types/file-saver": "^2.0.7",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.29.0",
