export sales report to pdf

--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
     "@ngrx/store": "^14.3.0",
     "@ngx-formly/core": "^6.3.10",
     "@types/google-maps": "^3.2.6",
+    "@types/pdfmake": "^0.2.1",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
     "buffer": "^6.0.3",
     "chart.js": "^3.9.1",
     "chartjs-plugin-datalabels": "^2.2.0",
-    "file-saver": "^2.0.5",
+    "file-saver": "^2.0.5",    
+    "html-to-pdfmake": "^2.4.7",
     "jquery": "^3.6.1",
     "ngx-paypal": "^10.1.0",
+    "pdfmake": "^0.2.6",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
